--- a/NetCamera/Info.plist
+++ b/NetCamera/Info.plist
@@ -138,6 +138,6 @@ mqqopensdkapiV4
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<false/>
+	<true/>
 </dict>
 </plist>
